<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_settings">Settings</string>
    <string name="app_name">爱山科</string>
    <string name="menu_home">  首页</string>
    <string name="menu_cmcc">  上网登录</string>
    <string name="menu_kuaitong">  快通有线</string>
    <string name="menu_jiaowu">  教务查询</string>
    <string name="menu_library">  图书馆</string>
    <string name="menu_card">  校园卡</string>
    <string name="menu_life">  生活服务</string>
    <string name="menu_news">  校园资讯</string>
    <string name="menu_set">  设置</string>
    <string name="menu_about">  关于</string>


    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>

    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>

    <drawable name="clr_normal">#32A8EB</drawable>
    <drawable name="clr_pressed">#2088C4</drawable>
    <drawable name="clr_whitebtn_normal">#ffffff</drawable>
    <drawable name="clr_whitebtn_pressed">#c6c6c6</drawable>
    <drawable name="clr_transparent_btn_normal">#99ffffff</drawable>
    <drawable name="clr_transparent_pressed">#99c6c6c6</drawable>

    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>


    <string name="manage_module">模块管理</string>

    <string name="schoolcard_catgory">校园卡</string>


    <string name="schoolcard_name">一卡通</string>
    <string name="schoolcard_info">提供校园一卡通余额查询，消费情况查询，以及挂失与修改密码服务</string>


    <string name="Jiaowu_catgory">教务</string>

    <string name="schedule_name">课程表</string>
    <string name="schedule_info">提供课程表查看，课程表下载，还能自定义课表</string>

    <string name="mark_name">成绩查询</string>
    <string name="mark_info">提供所有考试成绩查询，GPA查询</string>


    <string name="classroom_name">空教室查询</string>
    <string name="classroom_info">提供指定时间内的空教室信息查询服务</string>

    <string name="library_catagory">图书馆</string>

    <string name="library_search_name">馆藏查询</string>
    <string name="library_search_info">提供图书馆馆藏状态查询，书本位置查询</string>


    <string name="library_personal_name">个人中心</string>
    <string name="library_personal_info">提供书本续借，还书日期查询</string>


    <string name="net_catgory">网络服务</string>

    <string name="kuaitong_name">快通服务</string>
    <string name="kuaitong_info">提供快通流量查询，套餐修改，开停机以及充值服务</string>

    <string name="wifi_name">无线登录</string>
    <string name="wifi_info">提供CMCC以及ChinaUnicom快捷登录服务</string>


    <string name="scan_text">将条码放入框内, 即可自动扫描</string>

    <string name="umeng_isNewest">您使用的已经是最新版本。</string>
    <string name="umeng_notWifi">没有连接wifi。</string>
    <string name="umeng_timeout">请求超时。</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>

    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>

    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>

    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

    <string name="android_auto_update_dialog_checking">正在检查版本</string>
</resources>
