<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true" >


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_page_white"
             >

            <include layout="@layout/subpage_title_bar"
                     android:id="@+id/include2" />
            <TextView android:id="@+id/test_empty"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/courseTableText"
                      android:text="@string/empty"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_marginTop="90dp"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>


            <TextView android:id="@+id/test_monday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/mon"
                      style="@style/courseTableText"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_alignBaseline="@+id/test_empty"
                      android:layout_alignBottom="@+id/test_empty"
                      android:layout_toRightOf="@+id/test_empty"
                      android:layout_toEndOf="@+id/test_empty"/>



            <TextView android:id="@+id/test_tuesday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/tue"
                      style="@style/courseTableText"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_alignBaseline="@+id/test_monday_course"
                      android:layout_alignBottom="@+id/test_monday_course"
                      android:layout_toRightOf="@+id/test_monday_course"
                      android:layout_toEndOf="@+id/test_monday_course"/>


            <TextView android:id="@+id/test_wednesday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/wen"
                      style="@style/courseTableText"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_alignBaseline="@+id/test_tuesday_course"
                      android:layout_alignBottom="@+id/test_tuesday_course"
                      android:layout_toRightOf="@+id/test_tuesday_course"
                      android:layout_toEndOf="@+id/test_tuesday_course"/>


            <TextView android:id="@+id/test_thursday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/thu"
                      style="@style/courseTableText"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_alignTop="@+id/test_wednesday_course"
                      android:layout_toRightOf="@+id/test_wednesday_course"
                      android:layout_toEndOf="@+id/test_wednesday_course"/>

            <TextView android:id="@+id/test_friday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/fri"
                      style="@style/courseTableText"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_alignBaseline="@+id/test_thursday_course"
                      android:layout_alignBottom="@+id/test_thursday_course"
                      android:layout_toRightOf="@+id/test_thursday_course"
                      android:layout_toEndOf="@+id/test_thursday_course"/>

            <TextView android:id="@+id/test_saturday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/sta"
                      style="@style/courseTableText"
                      android:background="@drawable/course_text_view_bg"
                      android:layout_alignBaseline="@+id/test_friday_course"
                      android:layout_alignBottom="@+id/test_friday_course"
                      android:layout_toRightOf="@+id/test_friday_course"
                      android:layout_toEndOf="@+id/test_friday_course"/>


            <TextView android:id="@+id/test_sunday_course"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/courseTableText"
                      android:text="@string/sun"
                      android:background="@drawable/course_table_last_colum"
                      android:layout_above="@+id/scroll_body"
                      android:layout_toRightOf="@+id/test_saturday_course"
                      android:layout_toEndOf="@+id/test_saturday_course"/>
            <ScrollView
                android:id="@+id/scroll_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/test_empty"
                android:scrollbars="none"
                >
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/test_course_rl"
                    >
                </RelativeLayout>

            </ScrollView>

            <RelativeLayout
                android:id="@+id/rl_topbar"
                android:layout_width="70dip"
                android:layout_height="30dip"
                android:gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="55dp">


                <TextView
                    android:id="@+id/TextView_zhoushu"
                    android:layout_width="70dip"
                    android:layout_height="30dip"
                    android:background="@drawable/btn_selector_pop"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="middle"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_ok_button"
                android:text="重新加载课表"
                android:textColor="#fff"
                android:id="@+id/button_update"
                android:layout_below="@+id/include2"
                android:layout_toRightOf="@+id/rl_topbar"
                android:layout_toLeftOf="@+id/button_logout"
                android:layout_toStartOf="@+id/button_logout"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:layout_alignBottom="@+id/rl_topbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="周次："
                android:id="@+id/textView16"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:background="@drawable/selector_ok_button"
                android:text="注销"
                android:textColor="#fff"
                android:id="@+id/button_logout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/button_update"
                android:layout_alignTop="@+id/button_update" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="添加课程"
                android:id="@+id/button_schedule_add"
                android:background="#00"
                android:layout_alignParentTop="true" android:layout_alignRight="@+id/button_logout"
                android:layout_alignEnd="@+id/button_logout" android:textColor="#fff"
                android:textSize="13dp"/>

        </RelativeLayout>

</RelativeLayout>